# airflow_produtos

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  requirements.txt
ingestao_produto/dags/: dag_info.py  dag_ingestao_produto_group.py  dag_pda_servicos_opcionais.py  dag_stage_produto.py
ingestao_produto/include/sql/: qy_produto.sql
projeto_precommit/: .gitignore
projeto_precommit/dags/: dag_exporta_pda_minio_v1.py  dag_processa_pda_minio.py
projeto_precommit/tests/: test_validacao_version.py
